# SDC16_17

./: README.md  basicroad.dae
sdc_intersection/: ._._.DS_Store__  ._._CMakeLists.txt__  ._._manager.cc__  ._._manager.hh__  ._._sdcCar.cc__  ._._sdcCar.hh__  ._._sdcIntersection.cc__  ._._sdcIntersection.hh__  ._._sdc_intersection_world.xml__  ._._sdc_world_test.world__  ._CMakeLists.txt  ._FADBAD++  ._OpenCV  ._build  ._compile  ._instruction.cc  ._instruction.hh  ._manager.cc  ._manager.hh  ._models  ._request.cc  ._request.hh  ._sdcAngle.cc  ._sdcAngle.hh  ._sdcCar.cc  ._sdcCar.hh  ._sdcFrontLidarSensor.cc  ._sdcFrontLidarSensor.hh  ._sdcIntersection.cc  ._sdcIntersection.hh  ._sdcLidarRay.cc  ._sdcLidarRay.hh  ._sdcLidarSensorInfo.cc  ._sdcLidarSensorInfo.hh  ._sdcManager.cc  ._sdcManager.hh  ._sdcSensorData.cc  ._sdcSensorData.hh  ._sdcVisibleObject.cc  ._sdcVisibleObject.hh  (+26 more)
sdc_intersection/FADBAD++/: ._COPYRIGHT  ._README  ._badiff.h  ._examples  ._extra  ._fadbad.h  ._fadiff.h  ._tadiff.h  ._test
sdc_intersection/FADBAD++/examples/: ._ExampleBAD.cpp  ._ExampleBADFAD1.cpp  ._ExampleBADFAD2.cpp  ._ExampleBADFAD3.cpp  ._ExampleBADFAD4.cpp  ._ExampleFAD.cpp  ._ExampleTAD1.cpp  ._ExampleTAD2.cpp  ._ExampleTAD3.cpp  ._Makefile  ._MonteCarlo.cpp
sdc_intersection/FADBAD++/extra/: ._atan2ad.h  (+2 more)
sdc_intersection/OpenCV/: ._CompsLaneDetection  ._haarcascade.xml  ._haarcascade_stop.xml  ._lanedetection.cpp  ._new_cascade.xml
sdc_intersection/models/: ._asphalt_plane  ._comps_road  ._curved_road  ._ground_plane  ._intersection  ._lane_divider  ._sdcCar  ._static_car
(+246 files in other folders)
